# openfind

./: .gitignore  README.md  buscardom.py  index.html  install.sh  liberdom.py  openfind.py  privacy.html  privacy_policy.md  script.js  style.css  telegram_bot.py
.github/workflows/: android.yml
android/: .gitignore  build.gradle  gradle.properties
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/neoturcios/liberdom/: MainActivity.kt
android/app/src/main/kotlin/openfind/ai/: MainActivity.kt
android/app/src/main/kotlin/openfind/ai/data/repository/: DomainRepository.kt
android/app/src/main/kotlin/openfind/ai/di/: AppModule.kt
android/app/src/main/kotlin/openfind/ai/ui/components/: DomainResultCard.kt
android/app/src/main/kotlin/openfind/ai/ui/navigation/: Screen.kt
android/app/src/main/kotlin/openfind/ai/ui/screens/: SearchScreen.kt  SettingsScreen.kt  WatchlistScreen.kt
android/app/src/main/kotlin/openfind/ai/viewmodel/: SearchViewModel.kt
android/app/src/main/res/drawable/: ic_delete.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-v27/: themes.xml
android/app/src/main/res/values-v29/: themes.xml
android/openfind-core/: Cargo.toml
android/openfind-core/src/: brand_eval.rs  dns.rs  error.rs  lib.rs  ssl_audit.rs  whois.rs
web/: app.py
web/static/: script.js  style.css
web/templates/: index.html
