[package]
name = "openfind-core"
version = "1.0.0"
edition = "2021"
description = "OpenFind AI core engine — DNS, WHOIS, SSL, domain generation"

[dependencies]
regex = "1"
thiserror = "2"
once_cell = "1"
phf = { version = "0.11", features = ["macros"] }

[lib]
crate-type = ["cdylib"]
name = "openfind_core"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
